# HomoDeUS

./: .gitignore  CMakeLists.txt  README.md  control_msgs.msg  homodeus_setup.sh  install_dependencies.sh  nul  package.xml
.github/workflows/: test-nav.yml
Build_python_Lib/: README.md  setup.py
Build_python_Lib/HomoDeUS_common/: HomoDeUS_common.py
Build_python_Lib/HomoDeUS_common.egg-info/: PKG-INFO  SOURCES.txt
Build_python_Lib/My_first_library.egg-info/: PKG-INFO  top_level.txt
TiagoTutorials/: CMakeLists.txt  arm_controller.cpp  arm_controller.h  doDishesServer.py  main.cpp  package.xml
TiagoTutorials/src/: ArmInterface.cpp  tiago_arm_interface_node.cpp
base_control/: package.xml
base_control/scripts/: controller.py
base_navigation/: CMakeLists.txt  package.xml
base_navigation/launch/: HBBA_nav_listener.launch  test_nav.test
base_navigation/msg/: GoToResult.msg
base_navigation/scripts/: HBBA_nav_listener.py  bhvr_nav_listener.py  navigator.py  navigator_tester.py  point_setter.py  test_nav.py
common_library/: CMakeLists.txt  setup.py
common_library/src/HomoDeUS_common_py/: HomoDeUS_common_py.py
face_detection/: CMakeLists.txt  README.md  package.xml
face_detection/include/face_detection/: face_detector.h
face_detection/launch/: detector.launch
face_detection/msg/: FacePositions.msg
face_detection/src/: face_detection_node.cpp  face_detector.cpp  homodeus_proc_face_detection.cpp
head_control/: CMakeLists.txt  package.xml
head_control/script/: headActionClient.py  headActionClientTestMain.py  tiago_proc_face_tracking.py
head_control/scripts/: Utility.py  headActionClient.py  homodeus_bhvr_face_tracking.py  homodeus_motv_gaze_following.py  test.py  tiago_proc_face_tracking.py
homo_hbba_cfg/launch/: tiago_head_action_client.launch
homodeus_behaviors/: CMakeLists.txt  package.xml
homodeus_behaviors/scripts/: bhvr_approach_client.py  bhvr_arm_mover.py  bhvr_dialoguing.py  bhvr_docking.py  bhvr_face_tracking.py  bhvr_look_around.py  bhvr_nav_listener.py  bhvr_pick_up.py  bhvr_take_plate.py  bhvr_talking.py  bhvr_tracking_object.py  homodeus_bhvr_face_tracking.py
homodeus_behaviors/src/: ArmInterface.cpp  homodeus_arm_interface_node.cpp  pick_example.cpp
homodeus_common/: dialog_answer.json  landmarks.json
homodeus_common/common_library/: package.xml
homodeus_common/common_library/src/HomoDeUS_common_py/: HomoDeUS_common_py.py
homodeus_common/custom_msgs/: CMakeLists.txt  package.xml
homodeus_common/custom_msgs/action/: scenario_manager.action
homodeus_common/custom_msgs/msg/: ArmData.msg  FacePosition.msg  FacePositions.msg  TestDesire.msg
homodeus_common/data_folder/: dialog_context_fr.xml  speech_context_fr.xml
homodeus_common/rosparams/: CMakeLists.txt  homodeus_params.yaml  package.xml
homodeus_common/worlds/: homodeus.world  homodeus_office.world  homodeus_office_complete.world  homodeus_office_old.world  homodeus_yolo_test.world
homodeus_common/yolo_dataset_generation/: calibration-script.py  generation-script.py  splitting-script.py
homodeus_external/: CMakeLists.txt  package.xml  setup.py
homodeus_external/Dialogue/: dialog_context.xml  homodeus_bhvr_dialog.launch  homodeus_bhvr_dialog.py  homodeus_bhvr_dialog.yaml  homodeus_bhvr_face_tracking.py  test_dialog.py
homodeus_external/TiagoTutorials/: README.md  doDishesClient.py
homodeus_external/arm_controler/: CMakeLists.txt
homodeus_external/base_control/: CMakeLists.txt
homodeus_external/base_navigation/: CMakeLists.txt  package.xml
homodeus_external/base_navigation/launch/: HBBA_nav_listener.launch  navtest.launch
homodeus_external/base_navigation/msg/: GoToResult.msg
homodeus_external/base_navigation/scripts/: goal_setter.py  navigator.py  navigator_tester.py  point_setter.py  test.yaml
homodeus_external/face_detection/: CMakeLists.txt  README.md  package.xml
homodeus_external/head_control/: CMakeLists.txt  package.xml
homodeus_external/keyword_detector/: KeywordRecognizer.py
homodeus_external/speech_recognizer/: SpeechRecognizer.py
homodeus_external/talking/: CMakeLists.txt
homodeus_external/talking/action/: ttsAction.action
homodeus_external/talking/scripts/: talking_action.py
homodeus_external/talking_node/: talking_action.py
homodeus_external/xml_folder/: dialog_context.xml  dialog_context_fr.xml  speech_context.xml
homodeus_hbba_cfg/: CMakeLists.txt  desires.txt  hbba_struct.launch  hbba_struct.py  package.xml
homodeus_hbba_cfg/hbba_cfg/: bhvr_approach_client.yaml  bhvr_arm_interface.yaml  bhvr_dialoguing.yaml  bhvr_docking.yaml  bhvr_face_tracking.yaml  bhvr_give_plate.yaml  bhvr_goto.yaml  bhvr_interlocution_reaction.yaml  bhvr_looking_around.yaml  bhvr_nav_actionLib.yaml  bhvr_pause.yaml  bhvr_take_plate.yaml  bhvr_talking.yaml  bhvr_tracking_object.yaml  dialog_observer.yaml  face_detection_observer.yaml  face_tracking_observer.yaml  gotoLandmark_observer.yaml  goto_observer.yaml  (+58 more)
homodeus_motivations/: CMakeLists.txt  package.xml
homodeus_old/: TIAGoSimulDoc
homodeus_perceptions/: CMakeLists.txt  package.xml
homodeus_user_interface/: CMakeLists.txt  package.xml
image_recognition/: CHANGELOG.rst  CMakeLists.txt  README.md  ReadMe.md  package.xml
image_recognition/launch/: detector.launch  keypoint_tutorial.launch  matching_tutorial.launch
image_recognition/scripts/: gui_find_keypoints.py  gui_flann_matching.py
image_recognition/src/: face_detector.cpp  face_detector.h  find_keypoints.cpp  flann_matching.cpp  track_sequential.cpp
launch/: test_head.test
script/: headActionClient.py  headActionClientTestMain.py  speech_recognition_server_script.py  speech_recognizer.py  test_head.py
speech_recognition_server/: CMakeLists.txt  package.xml
tiago_hbba_cfg/: CMakeLists.txt  desires.txt  hbba_struct.py  package.xml
tiago_hhba_cfg/: CMakeLists.txt  package.xml
waiter_state_machine/: .behaviors.py.swp  behaviors.py  behaviors_test.py  headActionClient.py  headActionJointClient.py  head_test.py  main.py  menu.py  modules.py  modules_test.py  navigator.py  state_machine.py  states.py
(+285 files in other folders)
